# av-llm-sandbox

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
avlm/: actions.py
data/: download_carla.sh  download_kitti.sh  download_nuscenes.sh
hooks/: pre-commit
make_dataset/: make_dataset.py  meta_actions.py
models/: download_models.sh
notebooks/: analyze_nuscenes_actions.ipynb  analyze_nuscenes_waypoints.ipynb  test_dataset.ipynb  test_nuscenes.ipynb
scripts/: data_collect.py  data_collect.sh  make_dataset.py  process_data_new.ipynb  process_dataset.ipynb  reconstruct_sft.py
tests/: test_actions.py
